man_MANS = pidgin.1 finch.1

EXTRA_DIST = \
	C-HOWTO.dox \
	FAQ \
	PERL-HOWTO.dox \
	TCL-HOWTO.dox \
	account-signals.dox \
	blist-signals.dox \
	cipher-signals.dox \
	connection-signals.dox \
	conversation-signals.dox \
	core-signals.dox \
	dbus-server-signals.dox \
	funniest_home_convos.txt \
	finch.1.in \
	gtkaccount-signals.dox \
	gtkblist-signals.dox \
	gtkconv-signals.dox \
	gtklog-signals.dox \
	gtkimhtml-signals.dox \
	gtkrc-2.0 \
	log-signals.dox \
	notify-signals.dox \
	pidgin.1.in \
	plugin-i18n.dox \
	plugin-ids.dox \
	plugin-signals.dox \
	savedstatus-signals.dox \
	sound-signals.dox \
	the_penguin.txt \
	xfer-signals.dox
