if ENABLE_GTK_DOC
SUBDIRS = reference
endif

man_MANS =

if ENABLE_GTK
man_MANS += pidgin.1
endif

if ENABLE_GNT
man_MANS += finch.1
endif

EXTRA_DIST = \
	C-HOWTO.dox \
	PERL-HOWTO.dox \
	TCL-HOWTO.dox \
	funniest_home_convos.txt \
	finch.1.in \
	gtkrc-2.0 \
	pidgin.1.in \
	plugin-i18n.dox \
	plugin-ids.dox \
	plugin-signals.dox \
	the_penguin.txt
